Add create endpoint for database