@@ -1,3 +1,10 @@
 Regeln:
 
 - Game name length: 45 characters
+- Game price: max chf 300
+- Game purchases: Positive or zero (not negative)
+
+
+If errors:
+
+- VM Options Tomcat: `--enable-preview`
